--- a/configuration.properties
+++ b/configuration.properties
@@ -1,10 +1,31 @@
-browser:chrome
-google.url:https://www.google.com
-env:https://beta.docuport.app
+#browser:chrome
+browser=firefox-headless
+
+loop.practice=https://loopcamp.vercel.app/
+env=https://beta.docuport.app/
 #env:https://dev.docuport.app
-guru.url:http://demo.guru99.com/test/upload
-guru.drag:https://demo.guru99.com/test/drag_drop.html
-etsy:https://www.etsy.com
-loop.practice:https://loopcamp.vercel.app/
-dynamicLoading.username:tomsmith
-dynamicLoading.incorrectPassword:incorrect
+
+sauce.demo=https://www.saucedemo.com/
+
+google.url=https://www.google.com
+wikipedia.url=https://www.wikipedia.org/
+etsy=https://www.etsy.com
+product.url=https://demoblaze.com
+
+guru.url=http://demo.guru99.com/test/upload
+guru.drag=https://demo.guru99.com/test/drag_drop.html
+
+
+dynamicLoading.username=tomsmith
+dynamicLoading.incorrectPassword=incorrect
+
+smart.bear=http://secure.smartbearsoftware.com/samples/TestComplete12/WebOrders/
+smart.username=Tester
+smart.password=test
+
+#Docuport DB
+docuport.db.url=jdbc:postgresql://35.222.62.70:5432/postgres
+docuport.db.username=tstadmin
+docuport.db.password=hoxBam-jaghuj-7cette
+
+timeout=10
